k8s/infrastructure/base/network/dns/unbound/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unbound
  namespace: dns
  annotations:
    io.cilium/lb-ipam-ips: 10.25.150.252
spec:
  type: LoadBalancer
  clusterIP: 10.96.0.11
  ports:
    - name: dns
      port: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      protocol: UDP
  selector:
    app: unbound
