k8s/infrastructure/base/network/dns/unbound/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unbound-dns-access
  namespace: dns
spec:
  description: 'Allow DNS access for Unbound'
  endpointSelector:
    matchLabels:
      app: unbound
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: '5335'
              protocol: UDP
            - port: '5335'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
    - toFQDNs:
        - matchPattern: '*'  # Allow DNS resolution to external domains
